trunk/Archive2/09/48df885748d795/output
main.cpp: In function 'void Func(T)':
main.cpp:12:18: error: expected primary-expression before ')' token
     DoSomething(T);    
                  ^
